@startuml
' Class Diagram for YouthGuard Platform

class User {
  +_id: String
  +email: String
  +firstName: String
  +lastName: String
  +phoneNumber: String
  +dateOfBirth: Date
  +gender: String
  +location: Location
  +userType: String
  +accountStatus: String
  +lastLogin: Date
  +createdAt: Date
  +updatedAt: Date
  +passwordHash: String
  +isActive: Boolean
  +emailVerified: Boolean
}

class Location {
  +state: String
  +city: String
}

class Course {
  +_id: String
  +title: String
  +description: String
  +category: String
  +instructor: String
  +duration: Number
  +difficulty: String
  +thumbnail: String
  +enrollmentCount: Number
  +rating: Number
  +isActive: Boolean
  +createdBy: String
  +createdAt: Date
  +updatedAt: Date
}

class Lesson {
  +_id: String
  +title: String
  +description: String
  +content: String
  +videoUrl: String
  +duration: Number
  +order: Number
  +courseId: String
  +createdAt: Date
  +updatedAt: Date
}

class Enrollment {
  +_id: String
  +userId: String
  +courseId: String
  +enrolledAt: Date
  +status: String
  +completedAt: Date
}

class Progress {
  +_id: String
  +userId: String
  +courseId: String
  +lessonId: String
  +status: String
  +timeSpent: Number
  +quizScores: Object
  +completedAt: Date
  +createdAt: Date
  +updatedAt: Date
}

class Job {
  +_id: String
  +title: String
  +description: String
  +company: String
  +location: String
  +jobType: String
  +salaryMin: Number
  +salaryMax: Number
  +requirements: String[]
  +skills: String[]
  +applicationDeadline: Date
  +isActive: Boolean
  +postedBy: String
  +applicationsCount: Number
  +createdAt: Date
  +updatedAt: Date
}

class Application {
  +_id: String
  +jobId: String
  +userId: String
  +coverLetter: String
  +resumeUrl: String
  +status: String
  +feedback: String
  +appliedAt: Date
  +interviewScheduled: Boolean
  +interviewDetails: Object
}

class Message {
  +_id: String
  +senderId: String
  +receiverId: String
  +content: String
  +read: Boolean
  +createdAt: Date
  +updatedAt: Date
}

class Conversation {
  +_id: String
  +participants: String[]
  +createdAt: Date
  +updatedAt: Date
  +lastMessageId: String
}

' Relationships
User --> Location
User -- "1" Enrollment "many" --> Course
User -- "1" Progress "many" --> Course
User -- "1" Progress "many" --> Lesson
User -- "1" Application "many" --> Job
User -- "1" Message "many" --> User : sender/receiver
User -- "many" Conversation "many" --> User : participants

Course -- "1" Lesson "many" --> Course
Enrollment --> Progress
Message --> Conversation

note top of User
  Represents all users of the system:
  - Youth (primary users)
  - Mentors (course creators)
  - Employers (job posters)
  - Admins (system managers)
end note

note top of Course
  Educational courses containing
  multiple lessons. Created by
  mentors and taken by youth users.
end note

note top of Job
  Job postings created by employers
  for youth users to apply to.
end note

note top of Message
  Individual messages between users
  within a conversation context.
end note

@enduml